<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.king.player.view.widget.ActionView
            android:id="@+id/av_recent"
            android:layout_width="match_parent"
            android:layout_height="40pt"
            android:background="@color/white"
            app:sub_title="@string/more"
            app:title="@string/latest_play" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recent_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <com.king.player.view.widget.ActionView
            android:id="@+id/av_download"
            android:layout_width="match_parent"
            android:layout_height="40pt"
            android:background="@color/white"
            app:sub_title="@string/more"
            app:title="@string/download_manager" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/down_load"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>