<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.king.player.view.widget.ItemActionView
            android:id="@+id/search_recent"
            android:layout_width="match_parent"
            android:layout_height="100pt"
            android:layout_marginTop="20pt"
            android:background="@color/white"
            app:sub_title="@string/more"
            app:title="@string/latest_search" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="200pt">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/list_search"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/no_data_search"
                android:layout_width="796dp"
                android:layout_height="1091dp"
                android:background="#cffffc"
                android:gravity="center"
                android:text="@string/no_record"
                android:textColor="@color/textBlack"
                android:textSize="32pt" />
        </FrameLayout>

        <com.king.player.view.widget.ItemActionView
            android:id="@+id/download_recent"
            android:layout_width="match_parent"
            android:layout_height="100pt"
            android:layout_marginTop="20pt"
            android:background="@color/white"
            app:sub_title="@string/more"
            app:title="@string/latest_download" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="200pt">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/list_download"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/no_data_download"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#cffffc"
                android:gravity="center"
                android:text="@string/no_record"
                android:textColor="@color/textBlack"
                android:textSize="32pt" />
        </FrameLayout>

        <com.king.player.view.widget.ItemActionView
            android:id="@+id/collect_recent"
            android:layout_width="match_parent"
            android:layout_height="100pt"
            android:layout_marginTop="20pt"
            android:background="@color/white"
            app:sub_title="@string/more"
            app:title="@string/latest_collect" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="200pt">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/list_collect"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/no_data_collect"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#cffffc"
                android:gravity="center"
                android:text="@string/no_record"
                android:textColor="@color/textBlack"
                android:textSize="32pt" />
        </FrameLayout>

        <com.king.player.view.widget.ItemActionView
            android:id="@+id/play_recent"
            android:layout_width="match_parent"
            android:layout_height="100pt"

            android:layout_marginTop="20pt"
            android:background="@color/white"
            app:sub_title="@string/more"
            app:title="@string/latest_play" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="200pt">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/list_play"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/no_data_play"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#cffffc"
                android:gravity="center"
                android:text="@string/no_record"
                android:textColor="@color/textBlack"
                android:textSize="32pt" />
        </FrameLayout>


    </LinearLayout>


</ScrollView>